--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
-* linguist-vendored
-*.scss linguist-language=TypeScript
+$ cat .gitattributes
+*.ts linguist-language=Python
+*.scss linguist-language=Python
