--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 $ cat .gitattributes
-*.ts linguist-language=Python
+dist/* linguist-vendored
+*.scss linguist-language=TypeScript
 *.scss linguist-language=Python
