--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 $ cat .gitattributes
 dist/* linguist-vendored
-*.tsx linguist-language=TypeScript
+*.scss linguist-language=TypeScript
+*.TypeScript linguist-language=SCSS
