--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,3 @@
 $ cat .gitattributes
 dist/* linguist-vendored
-*.SCSS linguist-language=TypeScript
-**.tsx linguist-language=TypeScript
-*.ts linguist-language=SCSS
+*.tsx linguist-language=TypeScript
