--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "homepage": "https://caciodev.com",
   "version": "0.1.0",
   "private": true,
+  "license": "MIT",
   "dependencies": {
     "@emailjs/browser": "^3.6.2",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
