--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@prismicio/client": "^6.6.2",
+    "@prismicio/client": "^6.6.3",
+    "@prismicio/helpers": "^2.3.2",
     "@prismicio/react": "^2.4.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
@@ -19,6 +20,7 @@
     "framer-motion": "^6.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-parallax-tilt": "^1.7.46",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.7",
@@ -29,7 +31,8 @@
     "start": "react-scripts start",
     "build": "env-cmd -f ./.env react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "slicemachine": "start-slicemachine"
   },
   "eslintConfig": {
     "extends": [
@@ -56,6 +59,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-router-dom": "^5.3.3",
+    "slice-machine-ui": "^0.4.1",
     "typescript": "^4.4.2"
   }
 }
