--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@types/react-helmet": "^6.1.5",
     "animate.css": "^4.1.1",
     "env-cmd": "^10.1.0",
     "framer-motion": "^6.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-parallax-tilt": "^1.7.46",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
